add local files

--- a/index.html
+++ b/index.html
@@ -660,120 +660,135 @@
                         <th>YLD Performance</th>
                     </tr>
                 </thead>
-                <tbody id="table-body">
-                    <tr>
-                        <td class="rank-column">1</td>
-                        <td class="name-column">Sol Strategies</td>
-                        <td>HODL.CN</td>
-                        <td>Canada</td>
-                        <td>TSX</td>
-                        <td class="value-cell">278.1</td>
-                        <td class="value-cell">276.1</td>
-                        <td class="value-cell green-value">4.7</td>
-                        <td class="value-cell">420,707</td>
-                        <td class="value-cell">58.8</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell green-value">1000.0</td>
-                    </tr>
-                    <tr>
-                        <td class="rank-column">2</td>
-                        <td class="name-column">DeFi Development Corp</td>
-                        <td>DFDV</td>
-                        <td>USA</td>
-                        <td>Nasdaq</td>
-                        <td class="value-cell">366.5</td>
-                        <td class="value-cell">366.5</td>
-                        <td class="value-cell green-value">4.3</td>
-                        <td class="value-cell">609,092</td>
-                        <td class="value-cell">85.2</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell green-value">1000.0</td>
-                        <td class="value-cell">-</td>
-                    </tr>
-                    <tr>
-                        <td class="rank-column">3</td>
-                        <td class="name-column">Upendi</td>
-                        <td>UPXI</td>
-                        <td>USA</td>
-                        <td>Nasdaq</td>
-                        <td class="value-cell">344.6</td>
-                        <td class="value-cell">344.6</td>
-                        <td class="value-cell green-value">4.1</td>
-                        <td class="value-cell">596,714</td>
-                        <td class="value-cell">83.4</td>
-                        <td class="value-cell">141.1</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell green-value">100.0</td>
-                        <td class="value-cell">-</td>
-                    </tr>
-                    <tr>
-                        <td class="rank-column">4</td>
-                        <td class="name-column">Torrent Capital</td>
-                        <td>TSXV</td>
-                        <td>Canada</td>
-                        <td>TSX Venture</td>
-                        <td class="value-cell">22.5</td>
-                        <td class="value-cell">22.5</td>
-                        <td class="value-cell green-value">4.0</td>
-                        <td class="value-cell">40,039</td>
-                        <td class="value-cell">5.6</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                    </tr>
-                    <tr>
-                        <td class="rank-column">5</td>
-                        <td class="name-column">Actiater-louar.fr</td>
-                        <td>ALFR-01</td>
-                        <td>France</td>
-                        <td>Alternext</td>
-                        <td class="value-cell">1.7</td>
-                        <td class="value-cell">11.6</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">0.0</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell green-value">4.2</td>
-                        <td class="value-cell">-</td>
-                    </tr>
-                    <tr>
-                        <td class="rank-column">6</td>
-                        <td class="name-column">Classroom Holdings</td>
-                        <td>KIDZ</td>
-                        <td>USA</td>
-                        <td>Nasdaq CM</td>
-                        <td class="value-cell">87.9</td>
-                        <td class="value-cell">87.9</td>
-                        <td class="value-cell green-value">98.2</td>
-                        <td class="value-cell">6,400</td>
-                        <td class="value-cell">0.9</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell green-value">500.0</td>
-                        <td class="value-cell">-</td>
-                    </tr>
-                    <tr>
-                        <td class="rank-column">7</td>
-                        <td class="name-column">MemeStrategy</td>
-                        <td>2440.HK</td>
-                        <td>Hong Kong</td>
-                        <td>HKSE</td>
-                        <td class="value-cell">91.2</td>
-                        <td class="value-cell">91.2</td>
-                        <td class="value-cell green-value">267.2</td>
-                        <td class="value-cell">2,440</td>
-                        <td class="value-cell">0.3</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                        <td class="value-cell">-</td>
-                    </tr>
-                </tbody>
+<tr>
+<td class="rank-column">1</td>
+  <td class="name-column">Sol Strategies</td>
+  <td>HODL.CN</td>
+  <td>Canada</td>
+  <td>TSX</td>
+  <td class="value-cell">279.5</td>
+  <td class="value-cell">279.5</td>
+  <td class="value-cell green-value">4.4</td>
+  <td class="value-cell">420,707</td>
+  <td class="value-cell">63.4</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell green-value">1000.0</td>
+  <td class="value-cell">-</td>
+</tr>
+<tr>
+  <td class="rank-column">2</td>
+  <td class="name-column">DeFi Development Corp</td>
+  <td>DFDV</td>
+  <td>USA</td>
+  <td>Nasdaq</td>
+  <td class="value-cell">334.8</td>
+  <td class="value-cell">334.8</td>
+  <td class="value-cell green-value">3.6</td>
+  <td class="value-cell">609,092</td>
+  <td class="value-cell">91.8</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell green-value">1000.0</td>
+  <td class="value-cell">-</td>
+</tr>
+<tr>
+  <td class="rank-column">3</td>
+  <td class="name-column">Upexi</td>
+  <td>UPXI</td>
+  <td>USA</td>
+  <td>Nasdaq</td>
+  <td class="value-cell">126.1</td>
+  <td class="value-cell">126.1</td>
+  <td class="value-cell green-value">-</td>
+  <td class="value-cell">596,714</td>
+  <td class="value-cell">90.0</td>
+  <td class="value-cell">141.1</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell green-value">100.0</td>
+  <td class="value-cell">-</td>
+</tr>
+<tr>
+  <td class="rank-column">4</td>
+  <td class="name-column">Torrent Capital</td>
+  <td>TSXV</td>
+  <td>Canada</td>
+  <td>TSX Venture</td>
+  <td class="value-cell">22.5</td>
+  <td class="value-cell">22.5</td>
+  <td class="value-cell green-value">3.7</td>
+  <td class="value-cell">40,039</td>
+  <td class="value-cell">6.0</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell green-value">-</td>
+  <td class="value-cell">-</td>
+</tr>
+<tr>
+  <td class="rank-column">5</td>
+  <td class="name-column">Acheter-louer.fr</td>
+  <td>ALFR-OI</td>
+  <td>France</td>
+  <td>Alternext</td>
+  <td class="value-cell">1.7</td>
+  <td class="value-cell">11.8</td>
+  <td class="value-cell green-value">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">0.0</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell green-value">-</td>
+  <td class="value-cell">-</td>
+</tr>
+<tr>
+  <td class="rank-column">6</td>
+  <td class="name-column">Classover Holdings</td>
+  <td>KIDZ</td>
+  <td>USA</td>
+  <td>Nasdaq CM</td>
+  <td class="value-cell">65.4</td>
+  <td class="value-cell">65.4</td>
+  <td class="value-cell green-value">67.8</td>
+  <td class="value-cell">6,400</td>
+  <td class="value-cell">1.0</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell green-value">500.0</td>
+  <td class="value-cell">-</td>
+</tr>
+<tr>
+  <td class="rank-column">7</td>
+  <td class="name-column">MemeStrategy</td>
+  <td>2440.HK</td>
+  <td>Hong Kong</td>
+  <td>HKSE</td>
+  <td class="value-cell">91.2</td>
+  <td class="value-cell">91.2</td>
+  <td class="value-cell green-value">247.9</td>
+  <td class="value-cell">2,440</td>
+  <td class="value-cell">0.4</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell green-value">-</td>
+  <td class="value-cell">-</td>
+</tr>
+<tr>
+  <td class="rank-column">8</td>
+  <td class="name-column">Janover</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell green-value">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell">-</td>
+  <td class="value-cell green-value">-</td>
+  <td class="value-cell">-</td>
+</tr>
+
             </table>
         </div>
     </div>
